<resources>
    <string name="app_name">ProChat</string>
    <string name="sign_up">Sign Up..</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="profession">Profession</string>
    <string name="password">Password</string>
    <string name="sign_up_">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="select_profession">Select Profession</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_">Sign In</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
</resources>