<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="10">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/union2"
            android:scaleType="centerCrop"

            android:alpha="0.4"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="68dp"
            android:src="@drawable/prochat_logo_proposal_01_1"
            android:layout_gravity="top|center"
            android:layout_marginTop="80dp"/>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-200dp"
        android:layout_weight="7.6"
        android:background="@drawable/cornered_white_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textFontWeight="800"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/skip"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto"
                android:text="@string/user_name"
                android:textColor="@color/dark_gray"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/cornered_gray_bg"
                android:fontFamily="@font/roboto"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparent_gray"
                android:textFontWeight="400"
                android:textSize="16sp"
                android:gravity="start|center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/email"
                android:textColor="@color/dark_gray"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/cornered_gray_bg"
                android:fontFamily="@font/roboto"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparent_gray"
                android:textFontWeight="400"
                android:textSize="16sp"
                android:gravity="start|center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/profession"
                android:textColor="@color/dark_gray"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/cornered_gray_bg"
                android:fontFamily="@font/roboto"
                android:hint="@string/select_profession"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparent_gray"
                android:textFontWeight="400"
                android:textSize="16sp"
                android:gravity="start|center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/password"
                android:textColor="@color/dark_gray"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/cornered_gray_bg"
                android:fontFamily="@font/roboto"
                android:gravity="start|center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparent_gray"
                android:textFontWeight="400"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_bg"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/sign_up_"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/tritary_gray"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/signInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/sign_in_"
                    android:textColor="@color/colorAccent"
                    android:textFontWeight="800"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>